# syn

./: .gitignore  README.MD  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: release.yml
cli/: README.md  pyproject.toml
cli/src/synonym_cli/: __main__.py  cli.py  datamuse.py
raycast/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
raycast/scripts/: test-datamuse.ts  test-thesaurus.ts
raycast/src/: datamuse.tsx  explore.tsx  look-up.tsx  synonyms.tsx  thesaurus.tsx  word-explorer.tsx
raycast/src/api/: datamuse.ts  thesaurus.ts
src/: __main__.py  altervista.py  datamuse.py
src/synonym_cli/: __main__.py  altervista.py  cli.py  datamuse.py  settings.py  tur.py
synonym_cli/: __main__.py  altervista.py  cli.py  settings.py  tur.py
test/: test_main.py
web/: .dockerignore  .gitignore  Dockerfile  README.md  build.ts  fly.toml  frontend.tsx  index.html  index.ts  package.json  tsconfig.json
web/components/: FilterBar.tsx  Results.tsx  SearchBar.tsx  Toast.tsx
web/lib/: datamuse.ts
web/styles/: app.css
