[tool.poetry]
name = "synonym-cli"
description = "🌾Get synonyms and antonyms of words from Thesaurus.com and other sources in your terminal, with rich output."
authors = ["agmmnn <agmmnn@gmail.com>"]
version = "0.3.0"
readme = "README.md"
homepage = "https://github.com/agmmnn/syn"
repository = "https://github.com/agmmnn/syn"
keywords = ["synonym", "antonym", "thesaurus", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]

[tool.poetry.urls]
Changelog = "https://github.com/agmmnn/syn/releases"
Source = "https://github.com/agmmnn/syn"
"Bug Tracker" = "https://github.com/agmmnn/syn/issues"

[tool.poetry.dependencies]
gazpacho = "^1.1"
python = "^3.7"
requests = "^2.28.1"
rich = "^12.6.0"
importlib-metadata = "^5.2.0"
aiohttp = "^3.8.3"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
pytest = "^7.2.0"

[tool.poetry.scripts]
syn = "synonym_cli.__main__:cli"

[tool.black]
includes = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
