[tool.poetry]
name = "synonym-cli"
description = "🌾Get synonyms and antonyms of words from Thesaurus.com and other sources in your terminal, with rich output."
authors = ["agmmnn <agmmnn@gmail.com>"]
version = "0.3.1"
readme = "README.md"
homepage = "https://github.com/agmmnn/syn"
repository = "https://github.com/agmmnn/syn"
keywords = ["synonym", "antonym", "thesaurus", "cli"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Environment :: Console",
    "Topic :: Utilities",
]

[tool.poetry.urls]
Changelog = "https://github.com/agmmnn/syn/releases"
Source = "https://github.com/agmmnn/syn"
"Bug Tracker" = "https://github.com/agmmnn/syn/issues"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.31.0"
rich = "^13.6.0"
importlib-metadata = "^6.8.0"
aiohttp = "^3.9.0b0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pytest = "^7.4.0"

[tool.poetry.scripts]
syn = "synonym_cli.__main__:cli"

[tool.black]
includes = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
